# editor-rs

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
editor-core/: Cargo.toml
editor-core/src/: bookmark.rs  buffer.rs  clipboard.rs  command.rs  cursor.rs  diff_parser.rs  editor.rs  error.rs  git_history.rs  history.rs  history_browser.rs  lib.rs  selection.rs  session.rs  view.rs
editor-core/src/editor/: bookmark_ops.rs  clipboard_ops.rs  code_intelligence_ops.rs  cursor_ops.rs  file_ops.rs  git_history_ops.rs  history_browser_ops.rs  mod.rs  mode.rs  mouse_ops.rs  replace_ops.rs  search_ops.rs  search_types.rs  session_ops.rs  state.rs  state_accessors.rs  state_utils.rs  text_ops.rs  undo_ops.rs  view_ops.rs
editor-core/src/git_history/: annotations.rs  cleanup.rs  commit.rs  diff.rs  export_import.rs  gc.rs  graph.rs  integrity.rs  project_tracking.rs  repository.rs  restore.rs  retention.rs  stats.rs  types.rs
editor-core/tests/: annotation_tests.rs  bookmark_tests.rs  buffer_tests.rs  clipboard_tests.rs  code_intelligence_tests.rs  command_tests.rs  cursor_tests.rs  editing_commands_tests.rs  editor_tests.rs  error_tests.rs  file_safety_tests.rs  git_history_tests.rs  graph_tests.rs  history_browser_tests.rs  mode_tests.rs  mouse_tests.rs  multi_cursor_tests.rs  navigation_commands_tests.rs  performance_tests.rs  replace_tests.rs  search_tests.rs  session_tests.rs  time_travel_tests.rs  undo_redo_tests.rs
editor-core/tests/git_history_tests/: cleanup.rs  commit.rs  diff.rs  editor_state_integration.rs  export_import.rs  gc.rs  integrity.rs  large_file_config.rs  project_tracking.rs  repository.rs  retention.rs  stats.rs
editor-core/tests/git_history_tests/large_file_config/: edge_cases.rs  error_strategy.rs  integration.rs  mod.rs  size_detection.rs  skip_strategy.rs  warn_strategy.rs
editor-gui/: Cargo.toml
editor-gui/src/: history_renderer.rs  input.rs  lib.rs  main.rs  renderer.rs  stats_renderer.rs
editor-gui/tests/: gui_tests.rs  input_tests.rs
editor-tui/: Cargo.toml
editor-tui/src/: dialog.rs  input.rs  lib.rs  main.rs  menu.rs  renderer.rs
editor-tui/tests/: input_tests.rs  menu_tests.rs  tui_tests.rs
scripts/: line_counts.sh  misplaced_tests.sh
