[workspace]
resolver = "2"
members = [
    "editor-core",
    "editor-tui",
    "editor-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["editor-rs contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/editor-rs"

[workspace.dependencies]
ropey = "1.6"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
arboard = "3.4"
regex = "1.10"
git2 = "0.19"
sha2 = "0.10"
dirs = "5.0"
chrono = "0.4"
