[package]
name = "editor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ropey.workspace = true
notify.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.8"
