[package]
name = "editor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ropey.workspace = true
notify.workspace = true
serde.workspace = true
toml.workspace = true
arboard.workspace = true
parking_lot = "0.12"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
