[package]
name = "editor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ropey.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
arboard.workspace = true
regex.workspace = true
parking_lot = "0.12"
once_cell = "1.19"
git2.workspace = true
sha2.workspace = true
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.8"
