[package]
name = "editor-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "editor_tui"
path = "src/lib.rs"

[[bin]]
name = "editor-tui"
path = "src/main.rs"

[dependencies]
editor-core = { path = "../editor-core" }
ratatui = "0.26"
crossterm = "0.27"
